--- a/app/src/main/res/layout/main_dashboard_activity.xml
+++ b/app/src/main/res/layout/main_dashboard_activity.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="#A020F0"
+        android:background="#454d90"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:padding="8dp">
@@ -51,11 +52,11 @@
                 android:layout_gravity="center_horizontal"/>
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/doctor_placeholder_dashboard"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:background="@drawable/doctor_placeholder_circular"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="4dp"/>
+                android:layout_marginTop="4dp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -77,7 +78,7 @@
         android:layout_height="wrap_content"
         android:text="Test Your Eye Signals Here"
         android:textSize="18sp"
-        android:textColor="#A020F0"
+        android:textColor="#454d90"
         android:textStyle="bold"
         android:gravity="center"
         android:layout_gravity="center_horizontal"
@@ -105,8 +106,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Popular"
-            android:textSize="16sp"
+            android:textSize="20sp"
             android:textStyle="bold"
+            android:textColor="#454d90"
+
             android:layout_marginBottom="8dp" />
 
         <LinearLayout
@@ -116,6 +119,7 @@
             android:gravity="center_horizontal">
 
             <LinearLayout
+                android:id="@+id/SelfTestLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -126,7 +130,7 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@drawable/ic_launcher_foreground"/>
+                    android:background="@drawable/self_test"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -138,6 +142,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/Layout3D"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -148,7 +153,7 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@drawable/ic_launcher_foreground"/>
+                    android:background="@drawable/icon_3d"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -160,6 +165,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/EyeHealthLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -170,7 +176,7 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@drawable/ic_launcher_foreground"/>
+                    android:background="@drawable/eye_health"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -194,7 +200,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="My Eye Center"
-            android:textSize="16sp"
+            android:textSize="20sp"
+            android:textColor="#454d90"
             android:textStyle="bold"
             android:layout_marginBottom="8dp" />
 
@@ -205,6 +212,7 @@
             android:gravity="center_horizontal">
 
             <LinearLayout
+                android:id="@+id/DryEyeLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -215,7 +223,7 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@drawable/ic_launcher_foreground"/>
+                    android:background="@drawable/my_dry_eye_score"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -227,6 +235,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ReminderLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -237,7 +246,7 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@drawable/ic_launcher_foreground"/>
+                    android:background="@drawable/appointment_reminder"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -245,10 +254,12 @@
                     android:textColor="#000000"
                     android:textSize="14sp"
                     android:layout_gravity="center_horizontal"
+                    android:textAlignment="center"
                     android:layout_marginTop="4dp"/>
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/MedicineLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -259,7 +270,7 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@drawable/ic_launcher_foreground"/>
+                    android:background="@drawable/my_medicine"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
